objects/QuickLink__c.object
<CustomObject>
    <description>Contains the quick links used in the Quick Links component for the Lightning Home Page (Mainly for ODP Sales Lightning app).</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines whether the link is active or not. If a link is active, it will be displayed in Quick Links. Otherwise, it won&apos;t display.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideFromProfiles__c</fullName>
        <description>The profiles to hide this Quick Link from.</description>
        <label>Hide From Profiles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Profiles</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <description>The URL to redirect to when the Quick Link is clicked.</description>
        <label>Link</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <description>The name of the section the link falls under.</description>
        <label>Section</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account Maintenance - Ecommerce Setup Forms</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Applications</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Pricing &amp; Compliance</fullName>
                </value>
                <value>
                    <fullName>Reports</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Upload Templates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Quick Link</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Active__c</columns>
        <columns>NAME</columns>
        <columns>Link__c</columns>
        <columns>Section__c</columns>
        <columns>HideFromProfiles__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Link Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quick Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>